changes in 1.0
    - resolved issue #19 "Clean up JCasFactory methods that have xmi file names as a parameter"
    - fixed issue #18 "support for different flow controllers in aggregate AEs"
	- resolved issue #14 "move XWriter into uimaFIT from ClearTK"
	- resolved issue #15 "Move Initializable interface to uimaFIT along with related UIMAUtil.create methods"

changes in 0.9.13
	- changed name from uutuc to uimaFIT - see issue #1 "moving uutuc to UimaFIT" (issue number corresponds to uimafit issues)

changes in 0.9.12
	- added method AnalysisEngineFactory.createAnalysisEngineDescription which is now called by createAnalysisEngine
	- removed method Files.stripRootDir
	- fixed issue #34 "POM should specify absolute plugin versions"
	- fixed issue #33 "Setting AAE multi-deployment property properly when mixing single-deploy AEs and multi-deploy-AEs in the same AAE" 
	- completed issue #40 "SofaInitializerAnnotator and DocumentTextCopierAnnotator"
	- fixed issue #41 "AggregateBuilder doesn't work correctly if you add an aggregate description"
 	- fixed issue #32 "Working with sofas should be easier" by introducing AggregateBuilder
 	- added TypeCapability annotation and updated CapabilityFactory.createCapability accordingly
 	- CapabilityFactory.createCapability method returns a single capability set rather than an array
 	- added various component base classes which invoke the InitializeUtil and 
 	  ExternalResourceConfigurator to configure themselves based on their UIMAContext.  See, for example, org.uutuc.component.JCasAnnotator_ImplBase
  	
changes in 0.9.11
	- fixed issue #23 "use default values in InitializeUtil" again.  See final comments in that
	  issue for the mo' better fix.
	- fixed issue #27 "Parameters cannot be set to null".
	- add javadoc for @SofaCapability per wontfix issue #26 "sofa aware components treat "base CAS"
	  differently then "_InitialView""