@@ -29,6 +29,7 @@ import org.apache.uima.jcas.JCas;
 import org.apache.uima.resource.ResourceInitializationException;
 import org.apache.uima.resource.metadata.TypeSystemDescription;
 import org.junit.Test;
+import org.uimafit.component.JCasAnnotatorAdapter;
 import org.uimafit.factory.testAes.Annotator1;
 import org.uimafit.factory.testAes.Annotator2;
 import org.uimafit.factory.testAes.Annotator3;
@@ -37,10 +38,10 @@ import org.uimafit.factory.testAes.FlowAE2;
 import org.uimafit.factory.testAes.FlowAE3;
 import org.uimafit.factory.testAes.ReversableTestFlowController;
 import org.uimafit.factory.testAes.ViewNames;
+import org.uimafit.pipeline.SimplePipeline;
+import org.uimafit.testing.factory.TokenFactory;
 import org.uimafit.type.Sentence;
 import org.uimafit.type.Token;
-import org.uimafit.util.JCasAnnotatorAdapter;
-import org.uimafit.util.SimplePipeline;
 import org.uimafit.util.TypeSystemUtil;
 import org.uimafit.util.Util;
 import org.xml.sax.SAXException;
