@@ -30,8 +30,8 @@ import org.apache.uima.util.Progress;
 import org.junit.Test;
 import org.uimafit.factory.CollectionReaderFactory;
 import org.uimafit.factory.TypeSystemDescriptionFactory;
-import org.uimafit.util.HideOutput;
-import org.uimafit.util.JCasIterable;
+import org.uimafit.pipeline.JCasIterable;
+import org.uimafit.testing.util.HideOutput;
 /**
  * @author Steven Bethard, Philip Ogren
  */
