@@ -26,6 +26,7 @@ import java.io.PrintStream;
 
 import org.junit.Before;
 import org.junit.Test;
+import org.uimafit.testing.util.TearDownUtil;
 /**
  * @author Steven Bethard, Philip Ogren
  */
